--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <title>Run Buddy</title></title>
-    </head>
+    <meta charset="UTF-8" />
+    
+        <title>Run Buddy</title>
+    <header>
     <body>
-        <h1>Run Buddy</h1>
+        <h1><a href="/">RUN BUDDY</a></body><h1></body>
+        <nav>
+<!-- Unordered list element -->
+<ul>
+    <!-- List item element-->
+    <li>
+      <!-- Anchor element -->
+      <a href="#what-we-do">What We Do</a>
+    </li>
+    <li>
+      <a href="#what-you-do">What You Do</a>
+    </li>
+    <li>
+      <a href="#your-trainers">Your Trainers</a>
+    </li>
+    <li>
+      <a href="#reach-out">Reach Out</a>
+    </li>
+  </ul>
+
+        </nav>
+        </header>
 <section>
 
 </section>
