--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
   </section>
 
   <!-- "what we do" section -->
-  <section id="what-we-do">
-    <h2>What We Do</h2>
+  <section id="what-we-do" class="intro">
+    <h2 class="section-title primary-border">What We Do</h2>
     <p>
       butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
     </p>
   </section>
   
   <!-- "what you do" section -->
-  <section id="What You Do">
-    <h2>What You Do</h2>
+  <section id="What You Do" class="steps">
+    <h2 class="section-title secondary-border">What You Do</h2>
   
     <div>
       <img src="./assets/images/step-1.svg" alt="" />
@@ -107,6 +107,77 @@
       <p>Bi-weekly checkins with your trainer will keep you focused</p>
     </div>
   </section>
+
+  <!-- "meet the trainers" section -->
+  <section id="your-trainers" class="trainers">
+    <h2 class="section-title primary-border">Meet The Trainers</h2>
+    <article class="trainer">
+      <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+      <div class="trainer-bio text-left">
+        <h3>Arron Stephens</h3>
+        <h4>Speed / Strength</h4>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        </p>
+      </div>
+    </article>
+
+    <!-- second trainer bio -->
+    <article class="trainer">
+      <div class="trainer-bio text-right">
+        <h3>Joanna Gill</h3>
+        <h4>Endurance</h4>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        </p>
+      </div>
+      <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+    </article>
+
+    <!-- third trainer bio -->
+    <article class="trainer">
+      <img src="./assets/images/trainer-3.jpg"
+        alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+      <div class="trainer-bio text-left">
+        <h3>Harry "the Headband" Smith</h3>
+        <h4>Strength</h4>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        </p>
+      </div>
+    </article>
+  </section>
+
+<!-- "reach out" section -->
+<section id="reach-out" class="contact">
+  <h2 class="section-title secondary-border">Reach Out</h2>
+  <div class="contact-info">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3105.9065873824566!2d-77.17234068443808!3d38.88037897957325!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7b4eab42b9b6f%3A0x92f9e29bb2be10c7!2sE%20Fairfax%20St%2C%20Falls%20Church%2C%20VA%2022046!5e0!3m2!1sen!2sus!4v1637728838950!5m2!1sen!2sus" 
+    width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <div>
+      <h3>Run Buddy</h3>
+      <p>
+        Any questions or concerns before signing up?
+        <br />
+        Let us know and we'll be happy to talk to you!
+      </p>
+      <address>
+        2 E Fairfax St <br />
+        Falls Church, VA 22046 <br />
+        12345<br />
+        P: 555.RUN.BUDZ (667.999.9999)<br />
+        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+      </address>
+    </div>
+  </div>
+</section>
+
   <!-- footer -->
   <footer>
     <h2>❤️ Made with love by Run Buddy.</h2>
